src/main/java/com/example/error/ExchangeRateNotFoundException.java
package com.example.error;

public class ExchangeRateNotFoundException extends Exception {

    public ExchangeRateNotFoundException(String message) {
        super(message);
    }
}
